// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForgotPasswordPage should match default section snapshot 1`] = `
<div
  className="d-flex justify-content-center m-4"
>
  <div
    className="d-flex flex-column"
  >
    <form
      className="mw-500"
    >
      <h1
        className="mt-3"
      >
        Password assistance
      </h1>
      <p
        className="mb-4"
      >
        Please enter your log-in or recovery email address below and we will send you an email with instructions.
      </p>
      <div
        className="form-group mb-0 w-100"
      >
        <label
          className="h6 mr-1 form-label"
          htmlFor="forgot-password-input"
        >
          Email
        </label>
        <input
          aria-describedby=""
          className="form-control"
          id="forgot-password-input"
          name="email"
          onChange={[Function]}
          placeholder="username@domain.com"
          type="email"
          value=""
        />
        <p
          className="mb-2"
        >
          The email address you used to register with edX.
        </p>
      </div>
      <button
        className="mt-1 field-link"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-caret-right fa-w-6 mr-1"
          data-icon="caret-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 192 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        Need other help signing in?
      </button>
      <div
        className="pgn-transition-replace-group position-relative"
        style={
          Object {
            "height": null,
          }
        }
      >
        <div
          style={
            Object {
              "padding": ".1px 0",
            }
          }
        />
      </div>
      <button
        aria-disabled={false}
        aria-live="assertive"
        className="pgn__stateful-btn pgn__stateful-btn-state-null btn-primary mt-3 btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="d-flex align-items-center justify-content-center"
        >
          Recover my password
        </span>
      </button>
    </form>
  </div>
</div>
`;

exports[`ForgotPasswordPage should match forbidden section snapshot 1`] = `
<div
  className="d-flex justify-content-center m-4"
>
  <div
    className="d-flex flex-column"
  >
    <form
      className="mw-500"
    >
      <div
        className="fade alert alert-warning show"
        role="alert"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-exclamation-triangle fa-w-18 mr-2"
          data-icon="exclamation-triangle"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 576 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        <span>
          Your previous request is still in progress, please try again in a few moments.
        </span>
      </div>
      <h1
        className="mt-3"
      >
        Password assistance
      </h1>
      <p
        className="mb-4"
      >
        Please enter your log-in or recovery email address below and we will send you an email with instructions.
      </p>
      <div
        className="form-group mb-0 w-100"
      >
        <label
          className="h6 mr-1 form-label"
          htmlFor="forgot-password-input"
        >
          Email
        </label>
        <input
          aria-describedby=""
          className="form-control"
          id="forgot-password-input"
          name="email"
          onChange={[Function]}
          placeholder="username@domain.com"
          type="email"
          value=""
        />
        <p
          className="mb-2"
        >
          The email address you used to register with edX.
        </p>
      </div>
      <button
        className="mt-1 field-link"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-caret-right fa-w-6 mr-1"
          data-icon="caret-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 192 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        Need other help signing in?
      </button>
      <div
        className="pgn-transition-replace-group position-relative"
        style={
          Object {
            "height": null,
          }
        }
      >
        <div
          style={
            Object {
              "padding": ".1px 0",
            }
          }
        />
      </div>
      <button
        aria-disabled={false}
        aria-live="assertive"
        className="pgn__stateful-btn pgn__stateful-btn-state-forbidden btn-primary mt-3 btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="d-flex align-items-center justify-content-center"
        >
          Recover my password
        </span>
      </button>
    </form>
  </div>
</div>
`;

exports[`ForgotPasswordPage should match pending section snapshot 1`] = `
<div
  className="d-flex justify-content-center m-4"
>
  <div
    className="d-flex flex-column"
  >
    <form
      className="mw-500"
    >
      <h1
        className="mt-3"
      >
        Password assistance
      </h1>
      <p
        className="mb-4"
      >
        Please enter your log-in or recovery email address below and we will send you an email with instructions.
      </p>
      <div
        className="form-group mb-0 w-100"
      >
        <label
          className="h6 mr-1 form-label"
          htmlFor="forgot-password-input"
        >
          Email
        </label>
        <input
          aria-describedby=""
          className="form-control"
          id="forgot-password-input"
          name="email"
          onChange={[Function]}
          placeholder="username@domain.com"
          type="email"
          value=""
        />
        <p
          className="mb-2"
        >
          The email address you used to register with edX.
        </p>
      </div>
      <button
        className="mt-1 field-link"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-caret-right fa-w-6 mr-1"
          data-icon="caret-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 192 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        Need other help signing in?
      </button>
      <div
        className="pgn-transition-replace-group position-relative"
        style={
          Object {
            "height": null,
          }
        }
      >
        <div
          style={
            Object {
              "padding": ".1px 0",
            }
          }
        />
      </div>
      <button
        aria-disabled={true}
        aria-live="assertive"
        className="pgn__stateful-btn pgn__stateful-btn-state-pending btn-primary mt-3 disabled btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="d-flex align-items-center justify-content-center"
        >
          <span
            className="pgn__stateful-btn-icon"
          >
            <span
              aria-hidden={true}
              className="icon fa fa-spinner fa-spin"
              id="Icon1"
            />
          </span>
          Recover my password
        </span>
      </button>
    </form>
  </div>
</div>
`;
